<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeBlog</string>

    <string name="file_action_rename">Rename/Move to</string>
    <string name="file_action_delete">Delete</string>
    <string name="cancle">Cancle</string>
    <string name="confirm">Confirm</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save">Save</string>
    <string name="create_file">"Create a new File/Folder "</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="notice_action_failed">operation failed</string>
    <string name="jump_to">Jump to</string>
    <string name="create_article_text">Create new article: title</string>
    <string name="copy_to">Copy to</string>
    <string-array name="default_tag_array">
        <item>Daily Blog</item>
        <item>Philosophy</item>
        <item>IT</item>
    </string-array>
    <string name="create_article_btn">Create</string>
    <string name="create_tags">Create New Tag</string>
    <string name="article_description">Article Description</string>
    <string name="create_project">Create New Project</string>
    <string name="open_project">Open Existing Project</string>
    <string name="pull_project">Pull Remote Project</string>
    <string name="open_terminal">Open Terminal</string>
    <string name="notice" translatable="false">No matter where We called home</string>
    <string name="project_url" translatable="false">https://github.com/PangBaiWork/WeBlog</string>
    <string name="donate_url" translatable="false">https://pangbai.work/donate</string>
    <string name="select_file">Select a file</string>
    <string name="select_folder">Selet a folder</string>
    <string name="loading">Loading</string>
    <string name="input_blog_title">Blog title</string>
    <string name="clone_git">Clone git repository</string>

    <string-array name="default_category_array" translatable="false">
        <item>Diary</item>
        <item>IT</item>
        <item>Science</item>

    </string-array>
    <string name="start_server">Start real-time preview port:</string>
    <string name="scripts_list">Scripts list</string>
    <string name="select_scripts">Select scripts to run</string>
    <string name="executing">Executing</string>
    <string name="how_to_open_terminal">Tips: Slide up from the bottom to open the terminal</string>
    <string name="load_resources">Releasing resources</string>
    <string name="sdcard_permisson">Sdcard Permisson application</string>
    <string name="sdcard_description">Request for permission to read and write SD card data</string>
    <string name="select_blog_engine">Choose a blog engine</string>
    <string name="ask_install_hexo">Do you want to install hexo? \n If not you should manually install it or only use Hugo</string>
    <string name="live_preview">Live Preview</string>
    <string name="script_manager">Script Manage</string>
    <string name="close_project">Close Project</string>
    <string name="environment">Environment</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="scripts_execution_failed">Scripts execution Failed</string>
    <string name="search">Search</string>
    <string name="search_in_editor">Search text</string>
    <string name="search_replace">Replace all :</string>
    <string name="search_bt_previous">Previous</string>
    <string name="search_bt_next">Next</string>
    <string name="search_bt_replace">Replace</string>
    <string name="search_bt_close">Close</string>
    <string name="run_scripts">[RUN SCRIPTS]</string>
</resources>